# rust-esp-miner

./: .gitpod.Dockerfile  Cargo.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh  run-wokwi.sh
src/: client.rs  main.rs
