[package]
name = "esp-miner"
version = "0.1.0"
authors = ["johnny9 <985648+johnny9@users.noreply.github.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }


[build-dependencies]
embuild = "0.31.1"
